Replaced radio buttons with dropdown

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -111,20 +111,20 @@
   "province-qc.header": "Vérifiez auprès du gouvernement du Québec",
   "province-sk.header": "Vérifiez auprès du gouvernement de la Saskatchewan",
   "province-yt.header": "Vérifiez auprès du gouvernement du Yukon",
-  "province.ab": "Alberta.",
-  "province.bc": "Colombie-Britannique.",
-  "province.mb": "Manitoba.",
-  "province.nb": "Nouveau-Brunswick.",
-  "province.nl": "Terre-Neuve-et-Labrador.",
-  "province.ns": "Nouvelle-Écosse.",
-  "province.nt": "Territoires du Nord-Ouest.",
-  "province.nu": "Nunavut.",
-  "province.on": "Ontario.",
-  "province.pe": "Île-du-Prince-Édouard.",
-  "province.qc": "Québec.",
-  "province.sk": "Saskatchewan.",
+  "province.ab": "Alberta",
+  "province.bc": "Colombie-Britannique",
+  "province.mb": "Manitoba",
+  "province.nb": "Nouveau-Brunswick",
+  "province.nl": "Terre-Neuve-et-Labrador",
+  "province.ns": "Nouvelle-Écosse",
+  "province.nt": "Territoires du Nord-Ouest",
+  "province.nu": "Nunavut",
+  "province.on": "Ontario",
+  "province.pe": "Île-du-Prince-Édouard",
+  "province.qc": "Québec",
+  "province.sk": "Saskatchewan",
   "province.title": "Votre province ou territoire",
-  "province.yt": "Yukon.",
+  "province.yt": "Yukon",
   "reduced_income.1": "1000 $ ou moins.",
   "reduced_income.2": "1001 $ ou plus.",
   "reduced_income.title": "Votre revenu partiel",
