--- a/locales/en.json
+++ b/locales/en.json
@@ -28,6 +28,10 @@
   "cesb.header": "Help for students through the Canada Emergency Student Benefit (CESB)",
   "cssg.header": "Money for school if you volunteer for national service during the pandemic",
   "date_modified": "Date modified:",
+  "dtc.1": "Yes, you receive it for yourself.",
+  "dtc.2": "Yes, you receive it for your child.",
+  "dtc.3": "No.",
+  "dtc.title": "Disability Tax Credit",
   "ei_regular.header": "Apply for Employment Insurance (EI) Regular Benefits",
   "ei_regular_cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
   "ei_sickness_cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
@@ -62,6 +66,7 @@
   "footer.terms": "https://digital.canada.ca/legal/terms/",
   "footer.terms.desc": "Terms and conditions",
   "form.ccb": "Do you receive the Canada Child Benefit?",
+  "form.dtc": "Do you receive the Disability Tax Credit?",
   "form.gross_income": "How much total income before taxes did you earn from paid work in 2019 or the last 12 months?",
   "form.lost_job": "Choose the description that best fits your situation.",
   "form.mortgage_payments": "Are you worried about making mortgage or rent payments?",
@@ -196,5 +201,9 @@
   "your_situation.unchanged_income.3": "You’re retired.",
   "your_situation.unchanged_income.4": "You were a college or university student during the 2019-20 school year and now cannot find work.",
   "your_situation.unchanged_income.5": "You’re graduating high school in the 2019-20 school year and have applied for post-secondary education that will start before February 1, 2021.",
-  "your_situation.unchanged_income.none": "None of the above."
+  "your_situation.unchanged_income.none": "None of the above.",
+  "dtc.header": "More money for people with disabilities",
+  "dtc_allowance.header": "More money for people with disabilities",
+  "dtc_child.header": "More money for people with disabilities",
+  "dtc_oas.header": "More money for people with disabilities"
 }
