--- a/locales/en.json
+++ b/locales/en.json
@@ -28,6 +28,14 @@
   "cesb.header": "Help for students through the Canada Emergency Student Benefit (CESB)",
   "cssg.header": "Money for school if you volunteer for national service during the pandemic",
   "date_modified": "Date modified:",
+  "dtc.1": "Yes, you hold a valid certificate yourself.",
+  "dtc.2": "Yes, your child holds a valid certificate.",
+  "dtc.3": "No.",
+  "dtc.header": "More money for people with disabilities",
+  "dtc.title": "Disability Tax Credit",
+  "dtc_allowance.header": "More money for people with disabilities",
+  "dtc_child.header": "More money for people with disabilities",
+  "dtc_oas.header": "More money for people with disabilities",
   "ei_regular.header": "Apply for Employment Insurance (EI) Regular Benefits",
   "ei_regular_cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
   "ei_sickness_cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
@@ -62,6 +70,7 @@
   "footer.terms": "https://digital.canada.ca/legal/terms/",
   "footer.terms.desc": "Terms and conditions",
   "form.ccb": "Do you receive the Canada Child Benefit?",
+  "form.dtc": "Do you hold a valid certificate for the Disability Tax Credit?",
   "form.gross_income": "How much total income before taxes did you earn from paid work in 2019 or the last 12 months?",
   "form.lost_job": "Choose the description that best fits your situation.",
   "form.mortgage_payments": "Are you worried about making mortgage or rent payments?",
