--- a/locales/fr.json
+++ b/locales/fr.json
@@ -28,6 +28,14 @@
   "cesb.header": "Aide pour les étudiants via la Prestation canadienne d’urgence pour les étudiants (PCUE)",
   "cssg.header": "Bourse canadienne pour le bénévolat étudiant",
   "date_modified": "Date de modification :",
+  "dtc.1": "Oui, vous avez un certificat pour vous.",
+  "dtc.2": "Oui, vous avez un certificat pour votre enfant.",
+  "dtc.3": "Non.",
+  "dtc.header": "Plus d’argent pour les personnes ayant un handicap",
+  "dtc.title": "Crédit d'impôt pour personnes handicapées",
+  "dtc_allowance.header": "Plus d’argent pour les personnes ayant un handicap",
+  "dtc_child.header": "Plus d’argent pour les personnes ayant un handicap",
+  "dtc_oas.header": "Plus d’argent pour les personnes ayant un handicap",
   "ei_regular.header": "Présenter une demande pour les prestations régulières de l’assurance-emploi (AE)",
   "ei_regular_cerb.header": "Présenter une demande pour la Prestation canadienne d’urgence (PCU)",
   "ei_sickness_cerb.header": "Présenter une demande pour la Prestation canadienne d’urgence (PCU)",
@@ -62,6 +70,7 @@
   "footer.terms": "https://numerique.canada.ca/transparence/avis/",
   "footer.terms.desc": "Avis",
   "form.ccb": "Recevez-vous l’Allocation canadienne pour enfants?",
+  "form.dtc": "Avez-vous un certificat valide pour le crédit d'impôt pour personnes handicapées?",
   "form.gross_income": "Quel est votre revenu total (avant impôts) en 2019 ou des 12 dernier mois ?",
   "form.lost_job": "Choisissez la situation qui vous décrit le mieux",
   "form.mortgage_payments": "Avez-vous des inquiétudes au sujet de vos paiements d’hypothèque ou de loyer?",
