#minor Feature/province list (#523)
* Replaced radio buttons with dropdown

* Added default blank text

* Fixed CSS for dropdown

* Added endpoint testing

* Fixing Colours

Inverting autocomplete menu, adding a black border.

* Fix issue where selected value doesn't display

* Remove the legend replace with a valid input

* Cleaning up macro

* Adding a filter to do a localized sort

* Renaming to localizedSort

* Adding test for localized sort

* Fixing e2e tests

Adding a new command for entering inputs on the page
Added a helper function to help out with the way we've localized the
resultss tests.

* decoupled javascript from dropdown macro

* removed a script tag that I forgot to last commit

* Adding server side back button

* Working on back button

* Fixing css removing backbuttonjs

* Removing back button when no session

* Fixed bug with no history

* Removing from history on any backstep

* Added no-cache to force firefox to always get new pages from server

* clear history when returning to the app

* adding a comment

* Fixed issue with clearing history

* Added tests, cleaned up code

* Adding environment variable to fix a11y test

* Updated changelog

* removed some commented out code

* removed some more commented out code

* moved header config to middleware folder and added a test

* added unit test for history helper. removed a middleware that didn't do anything

Co-authored-by: Calvin Rodo <calvin.rodo@cds-snc.ca>
Co-authored-by: var-kyle <kyle.meelker@gmail.com>

--- a/locales/en.json
+++ b/locales/en.json
@@ -122,20 +122,20 @@
   "province-qc.header": "Check with the Quebec government",
   "province-sk.header": "Check with the Saskatchewan government",
   "province-yt.header": "Check with the Yukon government",
-  "province.ab": "Alberta.",
-  "province.bc": "British Columbia.",
-  "province.mb": "Manitoba.",
-  "province.nb": "New Brunswick.",
-  "province.nl": "Newfoundland and Labrador.",
-  "province.ns": "Nova Scotia.",
-  "province.nt": "Northwest Territories.",
-  "province.nu": "Nunavut.",
-  "province.on": "Ontario.",
-  "province.pe": "Prince Edward Island.",
-  "province.qc": "Quebec.",
-  "province.sk": "Saskatchewan.",
+  "province.ab": "Alberta",
+  "province.bc": "British Columbia",
+  "province.mb": "Manitoba",
+  "province.nb": "New Brunswick",
+  "province.nl": "Newfoundland and Labrador",
+  "province.ns": "Nova Scotia",
+  "province.nt": "Northwest Territories",
+  "province.nu": "Nunavut",
+  "province.on": "Ontario",
+  "province.pe": "Prince Edward Island",
+  "province.qc": "Quebec",
+  "province.sk": "Saskatchewan",
   "province.title": "Your province or territory",
-  "province.yt": "Yukon.",
+  "province.yt": "Yukon",
   "reduced_income.1": "$1,000 or less.",
   "reduced_income.2": "$1,001 or more.",
   "reduced_income.title": "Your reduced income",
