Change/content updates (#11)
* split lost job and employer closed on no income page

* added text stating that the questions are for individuals

* changed the start over and back button locations

* fixing cypress test

* updated changelog

--- a/locales/en.json
+++ b/locales/en.json
@@ -17,7 +17,7 @@
   "app.metaImageAlt": "Screen shot of the Find financial help during COVID-19 start page",
   "app.phase": "ALPHA",
   "app.title": "Find financial help during COVID-19",
-  "button.back": "Back",
+  "button.back": "Previous",
   "ccb.1": "Yes.",
   "ccb.2": "No.",
   "ccb.3": "You’re not sure.",
@@ -176,6 +176,7 @@
   "start.enable_cookies_title": "Enable cookies to use this service",
   "start.intro.2": "Here, you’ll be asked 7 to 10 questions, one at a time. ",
   "start.intro.3": "Then we’ll show you a list of benefits that may help in your situation. It will also have links for more information.",
+  "start.intro.4": "Please answer the questions as an individual, not a household.",
   "start.lastupdated": "Last updated",
   "start.submit": "Start now",
   "start.title": "Find financial help during COVID-19",
@@ -187,13 +188,14 @@
   "student_loan.header": "No student loan payments for 6 months",
   "unchanged_income.title": "Your situation",
   "wordmark.alt": "Symbol of the Government of Canada",
-  "your_situation.no_income.1": "You lost your job or your employer closed.",
-  "your_situation.no_income.2": "You’re self-employed and have no income.",
-  "your_situation.no_income.3": "You’re on unpaid leave to care for a child or sick person.",
-  "your_situation.no_income.4": "You’re sick or in mandatory quarantine and on unpaid leave.",
-  "your_situation.no_income.5": "You were on parental leave recently, but you cannot return to work due to COVID-19.",
-  "your_situation.no_income.6": "You were a college or university student during the 2019-20 school year and now cannot find work.",
-  "your_situation.no_income.7": "You were on Employment Insurance Regular or Fishing Benefits and your claim ended on or after December&nbsp;29,&nbsp;2019.",
+  "your_situation.no_income.1": "You lost your job.",
+  "your_situation.no_income.2": "Your employer closed.",
+  "your_situation.no_income.3": "You’re self-employed and have no income.",
+  "your_situation.no_income.4": "You’re on unpaid leave to care for a child or sick person.",
+  "your_situation.no_income.5": "You’re sick or in mandatory quarantine and on unpaid leave.",
+  "your_situation.no_income.6": "You were on parental leave recently, but you cannot return to work due to COVID-19.",
+  "your_situation.no_income.7": "You were a college or university student during the 2019-20 school year and now cannot find work.",
+  "your_situation.no_income.8": "You were on Employment Insurance Regular or Fishing Benefits and your claim ended on or after December&nbsp;29,&nbsp;2019.",
   "your_situation.no_income.none": "None of the above.",
   "your_situation.some_income.1": "Your employer has reduced your hours due to COVID-19.",
   "your_situation.some_income.2": "You’ve lost one or two part-time jobs and still have some income.",
