--- a/locales/fr.json
+++ b/locales/fr.json
@@ -17,7 +17,7 @@
   "app.metaImageAlt": "Capture d’écran de la page de démarrage «Trouver de l’aide financière pendant la COVID-19»",
   "app.phase": "ALPHA",
   "app.title": "Trouver de l’aide financière pendant la COVID-19",
-  "button.back": "Retour",
+  "button.back": "Précédent",
   "ccb.1": "Oui.",
   "ccb.2": "Non.",
   "ccb.3": "Vous n’êtes pas certain.",
@@ -176,6 +176,7 @@
   "start.enable_cookies_title": "Activez les témoins pour utiliser ce service",
   "start.intro.2": "Ici, nous vous demanderons entre 7 et 10 questions, une à la fois.",
   "start.intro.3": "Ensuite nous vous montrerons une liste de prestations qui pourraient vous aider. Des liens vers davantage d’information vous seront donnés.",
+  "start.intro.4": "Veuillez répondre aux questions en tant qu'individu et non en tant que ménage.",
   "start.lastupdated": "Dernière mise à jour le",
   "start.submit": "Commencer",
   "start.title": "Trouver de l’aide financière pendant la COVID-19",
@@ -187,13 +188,14 @@
   "student_loan.header": "Arrêt des paiements de votre dette d’étude pendant 6 mois",
   "unchanged_income.title": "Votre situation",
   "wordmark.alt": "Symbole du gouvernement du Canada",
-  "your_situation.no_income.1": "Vous avez perdu votre emploi ou votre employeur a cessé ses activités.",
-  "your_situation.no_income.2": "Vous êtes travailleur autonome et n’avez aucun revenu.",
-  "your_situation.no_income.3": "Vous êtes en congé sans solde pour prendre soin d’un enfant ou d’un proche malade.",
-  "your_situation.no_income.4": "Vous êtes en congé sans solde alors que vous êtes malade ou en quarantaine obligatoire.",
-  "your_situation.no_income.5": "Vous étiez récemment en congé parental, mais ne pouvez pas retourner travailler en raison de la COVID-19.",
-  "your_situation.no_income.6": "Vous étiez étudiant dans une institution postsecondaire lors de l’année scolaire 2019-20 et ne pouvez pas trouver d’emploi.",
-  "your_situation.no_income.7": "Vous receviez des prestations régulières d’assurance-emploi ou de pêcheur, et vos prestations ont cessé le 29&nbsp;décembre&nbsp2019 ou plus tard.",
+  "your_situation.no_income.1": "Vous avez perdu votre emploi.",
+  "your_situation.no_income.2": "Votre employeur a cessé ses activités.",
+  "your_situation.no_income.3": "Vous êtes travailleur autonome et n’avez aucun revenu.",
+  "your_situation.no_income.4": "Vous êtes en congé sans solde pour prendre soin d’un enfant ou d’un proche malade.",
+  "your_situation.no_income.5": "Vous êtes en congé sans solde alors que vous êtes malade ou en quarantaine obligatoire.",
+  "your_situation.no_income.6": "Vous étiez récemment en congé parental, mais ne pouvez pas retourner travailler en raison de la COVID-19.",
+  "your_situation.no_income.7": "Vous étiez étudiant dans une institution postsecondaire lors de l’année scolaire 2019-20 et ne pouvez pas trouver d’emploi.",
+  "your_situation.no_income.8": "Vous receviez des prestations régulières d’assurance-emploi ou de pêcheur, et vos prestations ont cessé le 29&nbsp;décembre&nbsp2019 ou plus tard.",
   "your_situation.no_income.none": "Aucune de ces options.",
   "your_situation.some_income.1": "Votre employeur a réduit votre horaire de travail en raison de la COVID-19.",
   "your_situation.some_income.2": "Vous avez perdu un ou deux de vos emplois à temps partiel, mais avez toujours un revenu additionnel.",
