--- a/locales/en.json
+++ b/locales/en.json
@@ -66,9 +66,9 @@
   "feedback.go_back": "To return to the previous page, click on the Back button.",
   "footer.contact": "https://www.canada.ca/en/contact.html",
   "footer.contact.desc": "Contact information",
-  "footer.privacy": "canada.ca/en/transparency/privacy.html",
+  "footer.privacy": "https://canada.ca/en/transparency/privacy.html",
   "footer.privacy.desc": "Privacy policy",
-  "footer.terms": "canada.ca/en/transparency/terms.html",
+  "footer.terms": "https://canada.ca/en/transparency/terms.html",
   "footer.terms.desc": "Terms and conditions",
   "form.ccb": "Do you receive the Canada Child Benefit?",
   "form.dtc": "Do you hold a valid certificate for the Disability Tax Credit?",
