--- a/locales/fr.json
+++ b/locales/fr.json
@@ -66,9 +66,9 @@
   "feedback.go_back": "Pour retourner à la page précédente, cliquez sur le bouton Retour.",
   "footer.contact": "https://www.canada.ca/fr/contact.html",
   "footer.contact.desc": "Coordonnées",
-  "footer.privacy": "canada.ca/fr/transparence/confidentialite.html",
+  "footer.privacy": "https://canada.ca/fr/transparence/confidentialite.html",
   "footer.privacy.desc": "Politique de confidentialité",
-  "footer.terms": "canada.ca/fr/transparence/avis.html",
+  "footer.terms": "https://canada.ca/fr/transparence/avis.html",
   "footer.terms.desc": "Avis",
   "form.ccb": "Recevez-vous l’Allocation canadienne pour enfants?",
   "form.dtc": "Avez-vous un certificat valide pour le crédit d'impôt pour personnes handicapées?",
