Feature/dtc addition (#13)
* adding new dtc pages

* added the 2 new dtc pages

* updated results cards for DTC. fixed up some css on one of the DTC pages

Co-authored-by: Adam Andrews <andr0272@algonquinlive.com>

* updated results for DTC

* renamed dtc-a and dtc-b to something more meaningful

* updated changelog

* updated cypress tests

* fixed html on result card

* updated text for DTC

* fixed accessibility issues on DTC pages

* Fixed typo

Co-authored-by: Adam Andrews <andr0272@algonquinlive.com>
Co-authored-by: Eric Dube <ericdube88@gmail.com>

--- a/locales/en.json
+++ b/locales/en.json
@@ -28,12 +28,18 @@
   "cesb.header": "Help for students through the Canada Emergency Student Benefit (CESB)",
   "cssg.header": "Money for school if you volunteer for national service during the pandemic",
   "date_modified": "Date modified:",
-  "dtc.1": "Yes, you hold a valid certificate yourself.",
-  "dtc.2": "Yes, your child holds a valid certificate.",
+  "dtc.1": "Yes, I am a person with disabilities.",
+  "dtc.2": "Yes, my child is a person with disabilities.",
   "dtc.3": "No.",
+  "dtc-individual.yes": "Yes.",
+  "dtc-individual.no": "No.",
+  "dtc.bullet1": "Canada Pension Plan Disability",
+  "dtc.bullet2": "Quebec Pension Plan Disability, or",
+  "dtc.bullet3": "1 of the disability supports provided by Veterans Affairs Canada Disability Pension:<ul><li>Disability Pension</li><li>Disability Award</li><li>Pain and Suffering Compensation</li><li>Critical Injury Benefit</li><li>Rehabilitation Services and Vocational Assistance Program</li><li>Income Replacement Benefit, and/or</li><li>Canadian Forces Income Support</li></ul>",
+  "dtc-child.yes": "Yes.",
+  "dtc-child.no": "No.",
   "dtc.header": "More money for people with disabilities",
-  "dtc.title": "Disability Tax Credit",
-  "dtc_allowance.header": "More money for people with disabilities",
+  "dtc.title": "One-time payment to persons with disabilities",
   "dtc_child.header": "More money for people with disabilities",
   "dtc_oas.header": "More money for people with disabilities",
   "ei_regular.header": "Apply for Employment Insurance (EI) Regular Benefits",
@@ -71,7 +77,9 @@
   "footer.terms": "https://canada.ca/en/transparency/terms.html",
   "footer.terms.desc": "Terms and conditions",
   "form.ccb": "Do you receive the Canada Child Benefit?",
-  "form.dtc": "Do you hold a valid certificate for the Disability Tax Credit?",
+  "form.dtc": "Are you or your child a person with disabilities?",
+  "form.dtc-individual": "Do you hold a valid Disability Tax Credit certificate or are you a beneficiary of one of the following as of July 1, 2020:",
+  "form.dtc-child": "Does your child have a valid Disability Tax Credit certificate?",
   "form.gross_income": "How much total income before taxes did you earn from paid work in 2019 or the last 12 months?",
   "form.lost_job": "Choose the description that best fits your situation.",
   "form.mortgage_payments": "Are you worried about making mortgage or rent payments?",
