--- a/locales/fr.json
+++ b/locales/fr.json
@@ -28,12 +28,18 @@
   "cesb.header": "Aide pour les étudiants via la Prestation canadienne d’urgence pour les étudiants (PCUE)",
   "cssg.header": "Bourse canadienne pour le bénévolat étudiant",
   "date_modified": "Date de modification :",
-  "dtc.1": "Oui, vous avez un certificat pour vous.",
-  "dtc.2": "Oui, vous avez un certificat pour votre enfant.",
+  "dtc.1": "Oui, je suis une personne en situation de handicap.",
+  "dtc.2": "Oui, mon enfant est une personne en situation de handicap.",
   "dtc.3": "Non.",
+  "dtc-individual.yes": "Oui.",
+  "dtc-individual.no": "Non.",
+  "dtc-child.yes": "Oui.",
+  "dtc-child.no": "Non.",
+  "dtc.bullet1": "Prestations d’invalidité du Régime de pensions du Canada",
+  "dtc.bullet2": "Prestation pour invalidité du Régime de rentes du Québec, ou",
+  "dtc.bullet3": "L’une des mesures de soutien pour invalidité offertes par Anciens Combattants Canada<ul><li>pension d’invalidité;</li><li>indemnité d’invalidité;</li><li>indemnité pour douleur et souffrance;</li><li>indemnité pour blessure grave;</li><li>Programme de services de réadaptation et d’assistance professionnelle;</li><li>prestations de remplacement du revenu;</li><li>Allocation de soutien du revenu des Forces canadiennes</li></ul>",
   "dtc.header": "Plus d’argent pour les personnes ayant un handicap",
-  "dtc.title": "Crédit d'impôt pour personnes handicapées",
-  "dtc_allowance.header": "Plus d’argent pour les personnes ayant un handicap",
+  "dtc.title": "Paiement unique aux personnes en situation de handicap",
   "dtc_child.header": "Plus d’argent pour les personnes ayant un handicap",
   "dtc_oas.header": "Plus d’argent pour les personnes ayant un handicap",
   "ei_regular.header": "Présenter une demande pour les prestations régulières de l’assurance-emploi (AE)",
@@ -71,7 +77,9 @@
   "footer.terms": "https://canada.ca/fr/transparence/avis.html",
   "footer.terms.desc": "Avis",
   "form.ccb": "Recevez-vous l’Allocation canadienne pour enfants?",
-  "form.dtc": "Avez-vous un certificat valide pour le crédit d'impôt pour personnes handicapées?",
+  "form.dtc": "Êtes-vous ou votre enfant une personne en situation de handicap?",
+  "form.dtc-individual": "Détenez-vous un certificat valide pour le crédit d'impôt pour personnes handicapées ou êtes-vous bénéficiaires en date du 1er juillet 2020, de l’une ou l’autre des mesures suivantes?",
+  "form.dtc-child": "Votre enfant détient-il un certificat valide pour le crédit d'impôt pour personnes handicapées?",
   "form.gross_income": "Quel est votre revenu total (avant impôts) en 2019 ou des 12 dernier mois ?",
   "form.lost_job": "Choisissez la situation qui vous décrit le mieux",
   "form.mortgage_payments": "Avez-vous des inquiétudes au sujet de vos paiements d’hypothèque ou de loyer?",
