--- a/locales/fr.json
+++ b/locales/fr.json
@@ -23,6 +23,7 @@
   "ccb.3": "Vous n’êtes pas certain.",
   "ccb.hint": "Consultez vos relevés bancaires afin de déterminer si vous recevez l’Allocation canadienne pour enfants. <a href='https://www.canada.ca/fr/agence-revenu/services/prestations-enfants-familles/dates-versement-prestations.html' target='_blank'>Consultez les dates de versement des prestations.</a>",
   "ccb.title": "Allocation canadienne pour enfants",
+  "crb.header": "Placeholder",
   "ccb_payment.header": "Paiements additionnels de l’Allocation canadienne pour enfants ",
   "cerb.header": "Présenter une demande pour la Prestation canadienne d’urgence (PCU)",
   "cesb.header": "Aide pour les étudiants via la Prestation canadienne d’urgence pour les étudiants (PCUE)",
