--- a/locales/en.json
+++ b/locales/en.json
@@ -25,6 +25,8 @@
   "ccb.title": "Canada Child Benefit",
   "ccb_payment.header": "Extra payment from Canada Child Benefit",
   "crb.header": "Apply for the Canadian Recovery Benefit (CRB)",
+  "crsb.header": "Apply for the Canada Recovery Sickness Benefit (CRSB)",
+  "crcb.header": "Apply for the Canada Recovery Caregiving Benefit (CRCB)",
   "cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
   "cesb.header": "Help for students through the Canada Emergency Student Benefit (CESB)",
   "cssg.header": "Money for school if you volunteer for national service during the pandemic",
