--- a/locales/en.json
+++ b/locales/en.json
@@ -25,6 +25,12 @@
   "ccb.title": "Canada Child Benefit",
   "ccb_payment.header": "Extra payment from Canada Child Benefit",
   "cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
+  "cerb.title": "Canada Emergency Response Benefit",
+  "cerb.1": "Yes, I am receiving the CERB.",
+  "cerb.2": "No, I am not receiving the CERB.",
+  "cerb_exhausted.1": "Yes, I have exhausted the 28 weeks of payments.",
+  "cerb_exhausted.2": "My 28 weeks of payments are almost up.",
+  "cerb_exhausted.3": "No, I have not exhausted my 28 weeks of payments.",
   "cesb.header": "Help for students through the Canada Emergency Student Benefit (CESB)",
   "cssg.header": "Money for school if you volunteer for national service during the pandemic",
   "date_modified": "Date modified:",
@@ -77,6 +83,8 @@
   "footer.terms": "https://canada.ca/en/transparency/terms.html",
   "footer.terms.desc": "Terms and conditions",
   "form.ccb": "Do you receive the Canada Child Benefit?",
+  "form.cerb": "Did you receive the CERB?",
+  "form.cerb_exhausted": "Have you exhausted the 28 weeks of payments?",
   "form.dtc": "Are you or your child a person with disabilities?",
   "form.dtc-individual": "Do you hold a valid Disability Tax Credit certificate or are you a beneficiary of one of the following as of July 1, 2020:",
   "form.dtc-child": "Does your child have a valid Disability Tax Credit certificate?",
