--- a/locales/fr.json
+++ b/locales/fr.json
@@ -25,6 +25,12 @@
   "ccb.title": "Allocation canadienne pour enfants",
   "ccb_payment.header": "Paiements additionnels de l’Allocation canadienne pour enfants ",
   "cerb.header": "Présenter une demande pour la Prestation canadienne d’urgence (PCU)",
+  "cerb.title": "(FR) Canada Emergency Response Benefit",
+  "cerb.1": "(FR) Yes, I am receiving the CERB.",
+  "cerb.2": "(FR) No, I am not receiving the CERB.",
+  "cerb_exhausted.1": "(FR) Yes, I have exhausted the 28 weeks of payments.",
+  "cerb_exhausted.2": "(FR) My 28 weeks of payments are almost up.",
+  "cerb_exhausted.3": "(FR) No, I have not exhausted my 28 weeks of payments.",
   "cesb.header": "Aide pour les étudiants via la Prestation canadienne d’urgence pour les étudiants (PCUE)",
   "cssg.header": "Bourse canadienne pour le bénévolat étudiant",
   "date_modified": "Date de modification :",
@@ -77,6 +83,8 @@
   "footer.terms": "https://canada.ca/fr/transparence/avis.html",
   "footer.terms.desc": "Avis",
   "form.ccb": "Recevez-vous l’Allocation canadienne pour enfants?",
+  "form.cerb": "(FR) Did you receive the CERB?",
+  "form.cerb_exhausted": "(FR) Have you exhausted the 28 weeks of payments?",
   "form.dtc": "Êtes-vous ou votre enfant une personne en situation de handicap?",
   "form.dtc-individual": "Détenez-vous un certificat valide pour le crédit d'impôt pour personnes handicapées ou êtes-vous bénéficiaires en date du 1er juillet 2020, de l’une ou l’autre des mesures suivantes?",
   "form.dtc-child": "Votre enfant détient-il un certificat valide pour le crédit d'impôt pour personnes handicapées?",
