add child-or-dependant-school-closed option

--- a/locales/en.json
+++ b/locales/en.json
@@ -207,17 +207,19 @@
   "your_situation.no_income.1": "You lost your job.",
   "your_situation.no_income.2": "Your employer closed.",
   "your_situation.no_income.3": "You’re self-employed and have no income.",
-  "your_situation.no_income.4": "You’re on unpaid leave to care for a child or sick person.",
-  "your_situation.no_income.5": "You’re sick or in mandatory quarantine and on unpaid leave.",
-  "your_situation.no_income.6": "You were on parental leave recently, but you cannot return to work due to COVID-19.",
-  "your_situation.no_income.7": "You were a college or university student during the 2019-20 school year and now cannot find work.",
-  "your_situation.no_income.8": "You were on Employment Insurance Regular or Fishing Benefits and your claim ended on or after December&nbsp;29,&nbsp;2019.",
+  "your_situation.no_income.4": "Your child or dependent's school, daycare or care facility is closed due to COVID-19.",
+  "your_situation.no_income.5": "You’re on unpaid leave to care for a child or sick person.",
+  "your_situation.no_income.6": "You’re sick or in mandatory quarantine and on unpaid leave.",
+  "your_situation.no_income.7": "You were on parental leave recently, but you cannot return to work due to COVID-19.",
+  "your_situation.no_income.8": "You were a college or university student during the 2019-20 school year and now cannot find work.",
+  "your_situation.no_income.9": "You were on Employment Insurance Regular or Fishing Benefits and your claim ended on or after December&nbsp;29,&nbsp;2019.",
   "your_situation.no_income.none": "None of the above.",
   "your_situation.some_income.1": "Your employer has reduced your hours due to COVID-19.",
   "your_situation.some_income.2": "You’ve lost one or two part-time jobs and still have some income.",
   "your_situation.some_income.3": "You’re self-employed and lost some income but you still have some paid work.",
   "your_situation.some_income.4": "You’re retired and lost your part-time work.",
   "your_situation.some_income.5": "You’re sick or in mandatory quarantine and on unpaid leave.",
+  "your_situation.some_income.6": "Your child or dependent's school, daycare or care facility is closed due to COVID-19.",
   "your_situation.some_income.none": "None of the above.",
   "your_situation.unchanged_income.1": "You’re working from home.",
   "your_situation.unchanged_income.2": "You’re on paid leave.",
