--- a/locales/fr.json
+++ b/locales/fr.json
@@ -207,17 +207,19 @@
   "your_situation.no_income.1": "Vous avez perdu votre emploi.",
   "your_situation.no_income.2": "Votre employeur a cessé ses activités.",
   "your_situation.no_income.3": "Vous êtes travailleur autonome et n’avez aucun revenu.",
-  "your_situation.no_income.4": "Vous êtes en congé sans solde pour prendre soin d’un enfant ou d’un proche malade.",
-  "your_situation.no_income.5": "Vous êtes en congé sans solde alors que vous êtes malade ou en quarantaine obligatoire.",
-  "your_situation.no_income.6": "Vous étiez récemment en congé parental, mais ne pouvez pas retourner travailler en raison de la COVID-19.",
-  "your_situation.no_income.7": "Vous étiez étudiant dans une institution postsecondaire lors de l’année scolaire 2019-20 et ne pouvez pas trouver d’emploi.",
-  "your_situation.no_income.8": "Vous receviez des prestations régulières d’assurance-emploi ou de pêcheur, et vos prestations ont cessé le 29&nbsp;décembre&nbsp2019 ou plus tard.",
+  "your_situation.no_income.4": "L'école, la crèche ou la garderie de votre enfant ou personne à charge est fermée pour cause de COVID-19.",
+  "your_situation.no_income.5": "Vous êtes en congé sans solde pour prendre soin d’un enfant ou d’un proche malade.",
+  "your_situation.no_income.6": "Vous êtes en congé sans solde alors que vous êtes malade ou en quarantaine obligatoire.",
+  "your_situation.no_income.7": "Vous étiez récemment en congé parental, mais ne pouvez pas retourner travailler en raison de la COVID-19.",
+  "your_situation.no_income.8": "Vous étiez étudiant dans une institution postsecondaire lors de l’année scolaire 2019-20 et ne pouvez pas trouver d’emploi.",
+  "your_situation.no_income.9": "Vous receviez des prestations régulières d’assurance-emploi ou de pêcheur, et vos prestations ont cessé le 29&nbsp;décembre&nbsp2019 ou plus tard.",
   "your_situation.no_income.none": "Aucune de ces options.",
   "your_situation.some_income.1": "Votre employeur a réduit votre horaire de travail en raison de la COVID-19.",
   "your_situation.some_income.2": "Vous avez perdu un ou deux de vos emplois à temps partiel, mais avez toujours un revenu additionnel.",
   "your_situation.some_income.3": "Vous êtes travailleur autonome et avez perdu une partie de votre revenu, mais vous avez toujours un peu de travail rémunéré.",
   "your_situation.some_income.4": "Vous êtes retraité et avez perdu un emploi à temps partiel.",
   "your_situation.some_income.5": "Vous êtes en congé sans solde alors que vous êtes malade ou en quarantaine obligatoire.",
+  "your_situation.some_income.6": "L'école, la crèche ou la garderie de votre enfant ou personne à charge est fermée pour cause de COVID-19.",
   "your_situation.some_income.none": "Aucune de ces options.",
   "your_situation.unchanged_income.1": "Vous faites du télétravail.",
   "your_situation.unchanged_income.2": "Vous êtes en congé payé.",
